# Cinematic-3DScene-Renderer

./: CMakeLists.txt  Camera.cpp  Camera.hpp  Model3D.cpp  Model3D.hpp  README.md  Shader.cpp  Shader.hpp  main.cpp
objects/scene/: scene.mtl  wings.mtl
objects/scene/textures/: Landscape_avalanche.exr  Landscape_erodedheight.exr  Landscape_heightmap.exr  Landscape_normal.exr  Landscape_water.exr
objects/sun/: sun.mtl
shaders/: lightCube.frag  lightCube.vert  shaderStart.frag  shaderStart.vert
